--- a/mod.conf
+++ b/mod.conf
@@ -1,3 +1,3 @@
 name = custom
 depends = default
-optional_depends = mobs_monster, 3d_armor, armor_mithril, moreores, obsidianstuff, mesecons, nyancat, mobs_skeletons, bonemeal
+optional_depends = mobs_monster, 3d_armor, armor_mithril, moreores, obsidianstuff, mesecons, nyancat, mobs_skeletons, bonemeal, xdecor, basic_materials, bale
