added unbreakable nodes as in maptools

--- a/mod.conf
+++ b/mod.conf
@@ -1,3 +1,3 @@
 name = custom
 depends = default
-optional_depends = mobs_monster, 3d_armor, armor_mithril, moreores, obsidianstuff, mesecons, nyancat, mobs_skeletons, bonemeal, xdecor, basic_materials, bale, armor_crystal
+optional_depends = mobs_monster, 3d_armor, armor_mithril, moreores, obsidianstuff, mesecons, nyancat, mobs_skeletons, bonemeal, xdecor, basic_materials, bale, armor_crystal, mesecons_mvps
